--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-usemin": "^2.4.0",
+    "grunt-usemin": "3.0.0",
     "grunt-rev": "^0.1.0",
     "grunt-open": "^0.2.3",
     "load-grunt-tasks": "^0.6.0",
